# syn

./: Cargo.toml  syn.json
codegen/: Cargo.toml
dev/: Cargo.toml  main.rs  parse.rs
src/: attr.rs  error.rs  expr.rs  generics.rs  ident.rs  lib.rs  op.rs  parse.rs  parse_macro_input.rs  parse_quote.rs  pat.rs  pred.rs  punctuated.rs  stmt.rs  term.rs  token.rs  ty.rs
tests/debug/: gen.rs
